# Audio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  setup.sh
.github/workflows/: cmake.yml  ubuntu.yml  windows.yml
docs/: index.html
docs/html/: README_8md.html  annotated.html  audio_8cpp.html  audio_8h.html  audio_8h_source.html  classAudio-members.html  classAudio.html  classAudioController-members.html  classAudioController.html  classMenu-members.html  classMenu.html  classMyApp-members.html  classMyApp.html  classUpdater-members.html  classUpdater.html  classes.html  controller_8cpp.html  controller_8h.html  controller_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  hierarchy.html  index.html  main_8cpp.html  main_8h.html  main_8h_source.html  md_README.html  menu_8cpp.html  menu_8h.html  menu_8h_source.html  menudata.js  pages.html  (+5 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_d.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+4 more)
scripts/: FedoraSetup.sh  UbuntuSetup.sh  WindowsSetup.bat
src/: audio.cpp  audio.h  controller.cpp  controller.h  main.cpp  main.h  menu.cpp  menu.h  updater.cpp  updater.h  utils.h
